application/web/test/src/main/java/com/tekgs/nextgen/duckies/view/invalidurl/InvalidUrlViewCalibratable.java
package com.tekgs.nextgen.duckies.view.invalidurl;

public interface InvalidUrlViewCalibratable {
    String getMessage();
}